AssignGit/src/objects/Organisation__c.object
<CustomObject>
    <fields>
        <fullName>Depart__c</fullName>
        <label>Depart</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Employeename__c</fullName>
        <label>Employeename</label>
        <referenceTo>Emp__c</referenceTo>
        <relationshipLabel>Organisations</relationshipLabel>
        <relationshipName>Organisations</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ManagerName__c</fullName>
        <label>ManagerName</label>
        <referenceTo>manage__c</referenceTo>
        <relationshipLabel>Organisations</relationshipLabel>
        <relationshipName>Organisations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Organisation</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Organisation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Organisations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>